versioned_docs/version-6.5.0/api/length.mdx
---
title: length
---

import * as turf from "turf-6";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>

### Description

Takes a [GeoJSON](https://tools.ietf.org/html/rfc7946#section-3) and measures its length in the specified units, [(Multi)Point](https://tools.ietf.org/html/rfc7946#section-3.1.2)'s distance are ignored.

### Parameters

| Name                  | Type                                                                                                                                                                                                     | Description                                                          |
| --------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------- |
| geojson               | **[Feature](https://tools.ietf.org/html/rfc7946#section-3.2)\<[LineString](https://tools.ietf.org/html/rfc7946#section-3.1.4) \| [MultiLineString](https://tools.ietf.org/html/rfc7946#section-3.1.5)>** | GeoJSON to measure                                                   |
| options<i>?</i>       | **Object**                                                                                                                                                                                               | Optional parameters _(default \{})_                                  |
| options.units<i>?</i> | **string**                                                                                                                                                                                               | can be degrees, radians, miles, or kilometers _(default kilometers)_ |

### Returns

<ul>
  **number** length of GeoJSON

</ul>

### Examples

```javascript
var line = turf.lineString([
  [115, -32],
  [131, -22],
  [143, -25],
  [150, -34],
]);
var length = turf.length(line, { units: "miles" });
```

export function Map0() {
  "use strict";

  // jsdoc example start
  var line = turf.lineString([
    [115, -32],
    [131, -22],
    [143, -25],
    [150, -34],
  ]);
  var length = turf.length(line, { units: "miles" });

  //addToMap
  var addToMap = { line };
  line.properties.distance = length;
  // jsdoc example end

  return <ExampleMap addToMap={addToMap} />;
}

<!-- prettier-ignore -->
<BrowserOnly>{() => <Map0 />}</BrowserOnly>

### Installation

```javascript
$ npm install @turf/length

import { length } from "@turf/length";
const result = length(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.length(...);
```
